# Kurator

./: LICENSE  README.md
backend/kurator/: .gitignore  Cargo.toml
backend/kurator/src/: db.rs  error.rs  main.rs
frontend/: default.css  index.html  kurator.js
