[package]
name = "kurator"
version = "0.9.0"
edition = "2021"
authors = ["Oliver Lau <kurator@ersatzworld.net>"]
description = "Backend (REST API) for wordlist curator"

[dependencies]
hyper = { version = ">= 0.14.17", features = ["full"] }
tokio = { version = ">= 1.17.0", features = ["full"] }
serde = { version = ">= 1.0", features = ["derive"] }
serde_json = ">= 1.0"
thiserror = ">= 1.0.30"
warp = ">=0.3.2"
bson = { version = ">=2.1.0", features = ["chrono-0_4", "serde_with", "uuid-0_8"] }
futures = "^0.3"
dotenv = ">= 0.15.0"
log = "^0.4.17"
env_logger = "^0.9"

[dependencies.mongodb]
version = ">= 2.1.0"
default-features = false
features = ["tokio-runtime", "bson-uuid-0_8", "zlib-compression"]
